--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -22,6 +22,7 @@
   "serverDetail": {
     "unknown": "Unbekannt",
     "arch": "Arch",
+    "virtualization": "Virtualization",
     "status": "Status",
     "online": "Online",
     "days": "Tage",
