--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -82,6 +82,7 @@
     "offline": "Оффлайн",
     "uptime": "Аптайм",
     "arch": "Arch",
+    "virtualization": "Virtualization",
     "mem": "Mem",
     "disk": "Диск",
     "system": "Система",
