Update 10 files: ServerDetailOverview.tsx, utils.ts, translation.json, translation.json, translation.json, translation.json, translation.json, translation.json, translation.json, nezha-api.ts

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -15,6 +15,7 @@
 		"temperature": "Temperatura",
 		"bootTime": "Inicio del sistema",
 		"arch": "Arch",
+		"virtualization": "Virtualization",
 		"status": "Estado",
 		"online": "En línea",
 		"version": "Versión",
