--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -61,6 +61,7 @@
 		"uptime": "運行時間",
 		"version": "版本",
 		"arch": "架構",
+		"virtualization": "虛擬化",
 		"mem": "內存",
 		"disk": "磁盤",
 		"region": "地區",
